--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="http://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="http://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="http://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758500.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1180494181-1-320x200.jpg">川普：1月15日我在白宫签第一阶段协议</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758277.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/0a106b7cff838d0e5159f2ab627f3e9a-600x400-320x200.jpg">中共统战渗透台湾 六大手段</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11744649.md#1">英预言家：2020年中国发生革命 川普连任</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/28/n11750678.md#1">夏小强：台总统候选人政见会结束 大势已定</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11743411.md#1">中共尽失人心 反习势力与保习派激战</a><br>
@@ -9,6 +9,7 @@
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753643.md#1">汤唯面对镜头洒泪 揭开女星不为人知的尴尬</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11745357.md#1">李小龙女儿起诉大陆真功夫餐厅 索赔逾2亿元</a><br>
 <br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758681.md#1">周晓辉：习发贺词 2020说新年快乐有些沉重</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758706.md#1">张林：共军在朝鲜战争中丧生两百万（1）</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758622.md#1">颜丹：中共“放开落户”无关迁徙自由</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757865.md#1">陈思敏：中共5G现况虚火过盛</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756280.md#1">项云：“密码法”是中共灭亡的心里写照</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756021.md#1">周晓辉：中美高层学习内容亦决定角力结果</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756134.md#1">谢燕益：杨胜军被非法拘禁致死案之紧急报案举报控告函</a><br>
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755947.md#1">颜丹：教育经济挤水分 中共忙找替罪羊</a><br>
 <br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/16/n11725027.md#1">【内幕】中共如何将全球港口和商船变武器</a><br>
@@ -32,9 +32,9 @@
 </td><td VALIGN=TOP width="352">
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758506.md#1">台陆委会回击中共：“倒果为因 恶意扭曲”</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758455.md#1">【新闻看点】欧盟趋强硬 华为：2020生存第一</a><br>
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758277.md#1">中共统战渗透台湾 五大手段</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758457.md#1">中共机关大院内窝藏卖淫点</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758425.md#1">《大师链》急退台湾市场 分析：反渗透法效果</a><br>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758500.md#1">川普：1月15日我在白宫签第一阶段协议</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757755.md#1">“人权与生俱来” 英巴士公司老板赞港人抗争</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758332.md#1">“为新的一年带来希望”神韵旧金山首场爆满</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757478.md#1">港人感佩法轮功传真相 恭祝李大师新年好</a><br>
